--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  otp_text_field: ^1.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
