--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   otp_text_field: ^1.1.3
   flutter_svg: ^2.0.4
   google_fonts: ^4.0.3
-
-
-  # The following adds the Cupertino Icons font to your application.
+  dotted_border: ^2.0.0+3
+  timelines: ^0.1.0
+  month_picker_dialog: ^1.1.0  # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
